--- a/Views/Tutorials/_Article.cshtml
+++ b/Views/Tutorials/_Article.cshtml
@@ -1,31 +1,17 @@
 ﻿@model Code2Night.DAL.Common.Article
-<link href="~/codemirror.css" rel="stylesheet" />
 
+<link asp-append-version="true" href="~/prism.css" rel="stylesheet" />
+<script asp-append-version="true" src="~/prism (1).js"></script>
 <h1 class="page-title">@Model.articletitle</h1>
 <hr>
 <style>
-    <!-- page-title end -->
-    pre[class*="language-"] > code {
-        position: relative;
-        display: block;
+    <!--
+    page-title end -->
+    pre[class*="language-"] {
+        padding: 0px 1em !important;
+        /* margin: .5em 0; */
+        overflow: auto;
     }
 </style>
 <p> @Html.Raw(Model.ArticleBody)</p>
 
-@*<pre class="language-css"><code>p { color: red }</code></pre>
-@Html.TextAreaFor(x => x.ArticleBody)
-<script>
-    $(document).ready(function () {
-        $('pre').each(function (index, elem) {
-            var editor = CodeMirror(elem, {
-                value=$(elem).html(),
-                lineNumbers: true,
-                readonly: true
-            });
-        });
-    })
-
-
-</script>*@
-<script asp-append-version="true" src="~/prism (1).js"></script>
-@*<script src="~/codemirror.js"></script>*@
