--- a/Views/Blog/index.cshtml
+++ b/Views/Blog/index.cshtml
@@ -15,7 +15,7 @@
             <div class="col-md-12">
                 <ol class="breadcrumb">
                     <li><i class="fa fa-home pr-10"></i><a href="@Url.Action("index","Users")">Home</a></li>
-                    <li class="active">@ViewBag.Title</li>
+                    <li class="active">Blogs</li>
                 </ol>
             </div>
         </div>
