--- a/Views/Users/Index.cshtml
+++ b/Views/Users/Index.cshtml
@@ -68,11 +68,11 @@
                             </div>
                             <div class="blogpost-content">
                                 <header>
-                                    <h2 class="title"><a target="_blank" href="~/Blog/MyBlog/@item.BlogUrl">@item.Title</a></h2>
-                                    <div class="submitted"><i class="fa fa-user pr-5"></i> by <a href="/Blog/Author/@(item.AuthorId)-@(item.AuthorName)">@item.AuthorName</a><a style="color: black;margin-left: 16px;"><i class="fa fa-eye"></i>@item.TotalView</a></div>
+                                    <h2 class="title" style="font-weight: 400 !important;"><a target="_blank" href="~/Blog/MyBlog/@item.BlogUrl">@item.Title</a></h2>
+                                    <div class="submitted" style="font-size:12px !important;"><i class="fa fa-user pr-5"></i> by <a href="/Blog/Author/@(item.AuthorId)-@(item.AuthorName)">@item.AuthorName</a><a style="color: black;margin-left: 16px;"><i class="fa fa-eye"></i>@item.TotalView</a></div>
 
                                 </header>
-                                <p>@item.BlogIntroduction</p>
+                                <p style="font-size:13px !important">@item.BlogIntroduction</p>
                             </div>
                         </div>
 
