--- a/Views/Blog/BlogDetail.cshtml
+++ b/Views/Blog/BlogDetail.cshtml
@@ -126,7 +126,7 @@
         <div class="row">
             <div class="col-md-12">
                 <ol class="breadcrumb">
-                    <li><i class="fa fa-home pr-10"></i><a href="@Url.Action("index","User")">Home</a></li>
+                    <li><i class="fa fa-home pr-10"></i><a href="@Url.Action("Index","User")">Home</a></li>
                     <li class="active">Blogpost</li>
                 </ol>
             </div>
@@ -186,7 +186,7 @@
 }
 <div>
     <p itemprop="articleBody">
-        @Html.Raw(Model.MyBlog.BlogBody)
+        @(Html.Raw(Model.MyBlog.BlogBody.Replace("<script>", "&lt;script&gt;").Replace("</script>", "&lt;/script&gt;")))
     </p>
 </div>
 </div>
