--- a/Views/Blog/Author.cshtml
+++ b/Views/Blog/Author.cshtml
@@ -25,7 +25,7 @@
         <div class="row">
             <div class="col-md-12">
                 <ol class="breadcrumb">
-                    <li><i class="fa fa-home pr-10"></i><a href="@Url.Action("index","User")">Home</a></li>
+                    <li><i class="fa fa-home pr-10"></i><a href="@Url.Action("Index","User")">Home</a></li>
                     <li>Blogs    </li>
                     <li class="active">
                         @(!string.IsNullOrEmpty(Model.Tag)?"Tags":"Authors")
