--- a/Views/Blog/_BlogsList.cshtml
+++ b/Views/Blog/_BlogsList.cshtml
@@ -25,7 +25,7 @@
 }
 
 <script asp-append-version="true" src="/plugins/isotope/isotope.pkgd.min.js"></script>
-@foreach (var blog in Model.BlogsList)
+@foreach (var blog in Model.BlogsList.Where(x=>x.IsApproved))
     {
 <div class="masonry-grid-item col-sm-6 col-md-4" id="mydiv">
     <!-- blogpost start -->
