--- a/Views/Error/index.cshtml
+++ b/Views/Error/index.cshtml
@@ -22,7 +22,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <ol class="breadcrumb">
-                            <li><i class="fa fa-home pr-10"></i><a href="@Url.Action("index","User")">Home</a></li>
+                            <li><i class="fa fa-home pr-10"></i><a href="@Url.Action("Index","User")">Home</a></li>
                             <li class="active">Error 404</li>
                         </ol>
                     </div>
