--- a/Views/Tutorials/Article.cshtml
+++ b/Views/Tutorials/Article.cshtml
@@ -69,7 +69,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <ol class="breadcrumb">
-                        <li><i class="fa fa-home pr-10"></i><a href="@Url.Action("index","User")">Home</a></li>
+                        <li><i class="fa fa-home pr-10"></i><a href="@Url.Action("Index","User")">Home</a></li>
                         <li><a href="@Url.Action("index","Tutorials")">Tutorials</a></li>
                         <li class="active">@ViewBag.Title</li>
                     </ol>
