--- a/Views/Users/Index.cshtml
+++ b/Views/Users/Index.cshtml
@@ -58,7 +58,7 @@
                 <!-- ================ -->
                 <h3 class="page-title">Latest Blog</h3>
                 <div class="separator-2"></div>
-                @foreach (var item in Model.OrderByDescending(x => x.Date))
+                @foreach (var item in Model.Where(x => x.IsApproved).OrderByDescending(x => x.Date))
                 {
                     <article class="clearfix blogpost object-non-visible animated object-visible fadeInUpSmall" data-animation-effect="fadeInUpSmall" data-effect-delay="200">
                         <div class="blogpost-body">
@@ -91,7 +91,7 @@
                             <div class="gcse-search"></div>
 
                         </div>
-                        @foreach (var item in Model.OrderByDescending(x => x.TotalView))
+                        @foreach (var item in Model.Where(x => x.IsApproved).OrderByDescending(x => x.TotalView))
                         {
                             <ul class="tweets">
                                 <li>
