--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,7 +7,7 @@
     <script data-ad-client="ca-pub-2622840091485569" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
     <link href="~/prism.css" rel="stylesheet" />
-    <script async custom-element="amp-auto-ads"
+    @*<script async custom-element="amp-auto-ads"
             src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
     </script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114851264-8"></script>
@@ -16,7 +16,7 @@
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
         gtag('config', 'UA-114851264-8');
-    </script>
+    </script>*@
     <title>@ViewBag.Title</title>
 
     @if (!string.IsNullOrEmpty(Convert.ToString(ViewBag.MetaDescription)))
@@ -92,7 +92,6 @@
             padding: 0px 1em !important;
             /* margin: .5em 0; */
             overflow: auto;
-
         }
     </style>
 </head>
@@ -131,7 +130,6 @@
                                         <li class="pinterest"><a target="_blank" href="http://www.pinterest.com/"><i class="fa fa-pinterest"></i></a></li>
                                     </ul>*@
                             </div>
-
                         </div>
                     </div>
                 </div>
@@ -181,6 +179,7 @@
                                         <ul class="nav navbar-nav navbar-right">
                                             <li class="Home">
                                                 <a class="links" href="/Users/Index">Home</a>
+
                                             </li>
                                             <li class="Blogs">
                                                 <a class="links" href="@Url.Action("Index","Blog")">Blogs </a>
@@ -198,18 +197,23 @@
                                                     <a class="links" href="/Blog/AddBlog"> Post Blog </a>
                                                 }
                                             </li>
-                                            @if (Encrypt.GetUserCookieValue("UserId", HttpContextAccessor.HttpContext) == null && string.IsNullOrEmpty(Encrypt.GetUserCookieValue("UserId", HttpContextAccessor.HttpContext)) || Encrypt.GetUserCookieValue("UserId", HttpContextAccessor.HttpContext) == "0")
-                                            {
-                                                <li>
-                                                    <a class="links" href="@Url.Action("Register", "Users")">Register</a>
-                                                </li>
-                                            }
+
 
                                             @if (Encrypt.GetUserCookieValue("UserId", HttpContextAccessor.HttpContext) == null && string.IsNullOrEmpty(Encrypt.GetUserCookieValue("UserId", HttpContextAccessor.HttpContext)) || Encrypt.GetUserCookieValue("UserId", HttpContextAccessor.HttpContext) == "0")
                                             {
-                                                <li>
-                                                    <a class="links" href="@Url.Action("Login", "Users")">Login</a>
+                                                <li class="dropdown" style="">
+                                                    <a href="index.html" class="dropdown-toggle" data-toggle="dropdown">Members</a>
+                                                    <ul class="dropdown-menu">
+                                                        <li><a href="@Url.Action("Register", "Users")">Register</a></li>
+                                                        <li><a href="@Url.Action("Login", "Users")">Login</a></li>
+                                                    </ul>
                                                 </li>
+                                                @*<li>
+                <a class="links" href="@Url.Action("Register", "Users")">Register</a>
+            </li>
+            <li>
+                <a class="links" href="@Url.Action("Login", "Users")">Login</a>
+            </li>*@
                                             }
                                             else
                                             {
@@ -220,10 +224,16 @@
                                                     <a class="links" href="@Url.Action("Logout", "Blog")">Logout</a>
                                                 </li>
                                             }
-
+                                            <li class="dropdown" style="">
+                                                <a href="index.html" class="dropdown-toggle" data-toggle="dropdown">Tools</a>
+                                                <ul class="dropdown-menu">
+                                                    <li><a href="@Url.Action("Index", "JsonBeautifier")">Json Beautifier</a></li>
+                                                </ul>
+                                            </li>
+                                            
                                             @*<li>
-                                                    <a href="@Url.Action("ContactUs","Users")">Contact Us</a>
-                                                </li>*@
+            <a href="@Url.Action("ContactUs","Users")">Contact Us</a>
+        </li>*@
                                         </ul>
                                     </div>
                                 </div>
@@ -351,6 +361,9 @@
                                             <li>
                                                 <a href="@Url.Action("ContactUs","Users")">Contact</a>
                                             </li>
+                                            <li>
+                                                <a href="@Url.Action("Index", "JsonBeautifier")">Json Beautifier</a>
+                                            </li>
                                         </ul>
                                     </div>
                                 </nav>
@@ -381,7 +394,6 @@
                 }
             });
         })
-
     </script>
     @*<script>
             $(document).ready(function () {
